--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -1,3 +1,14 @@
+{%  extends "template/base.html" %}
+
+{% block titulo %}
+
+Formulario para nuevos hoteles:
+
+{% endblock %}
+
+
+{% block contenidoquecambia %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +19,19 @@
 </head>
 <body>
     {% for i in vuelos %}
-        <h1>{{i.name}}</h1>
-        <h2>{{i.location}}</h2>
-        <h2>Fecha de Entrada: {{i.date_departue}}</h2>
-        <h2>Fecha de Salida: {{i.date_return}}</h2>
-        <h3>Precio: {{i.price}}</h3>
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+            <h2 class="card-title">{{i.name}}</h2>
+            <h3 class="card-subtitle mb-2 text-muted">{{i.location}}</h3>
+            <p class="card-text">Fecha de Ida: {{i.date_departue}}</p>
+            <p class="card-text">Fecha de Vuelta: {{i.date_return}}</p>
+            <h3 class="card-title">Precio: {{i.price}}</h3>
+            </div>
+        </div>
+
     {% endfor %}
 </body>
 </html>
+
+{% endblock  %}
