--- a/pagina_viajes/template/search_products.html
+++ b/pagina_viajes/template/search_products.html
@@ -10,8 +10,8 @@ search
 <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">{{lista.name}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{lista.apellido}}</h6>
-      <p class="card-text">{{lista.descripcion}}</p>
+      <h6 class="card-subtitle mb-2 text-muted">{{lista.location}}</h6>
+      <p class="card-text">{{lista.description}}</p>
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
     </div>
