--- a/pagina_viajes/template/hotel.html
+++ b/pagina_viajes/template/hotel.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}
 
-Formulario para nuevos hoteles:
+Hoteles
 
 {% endblock %}
 
@@ -27,7 +27,7 @@ Formulario para nuevos hoteles:
             <h4 class="card-text">{{i.location}}</h4>
             <p class="card-text">Fecha de Entrada: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Salida: {{i.date_return}}</p>
-            <p class="card-text">Precio: {{i.price}}</p>
+            <h3 class="card-text">Precio: {{i.price}}</h3>
         </div>
     </div>
 
