--- a/pagina_viajes/template/paquete.html
+++ b/pagina_viajes/template/paquete.html
@@ -26,6 +26,8 @@ Paquetes
         <h3 class="card-subtitle mb-2 text-muted">{{paquete.location}}</h3>
         <p class="card-text">{{paquete.description}}</p>
         <h3 class="card-title">Precio: {{paquete.price}}</h3>
+        <a href="#" class="btn btn-primary">Editar</a>
+        <a href="#" class="btn btn-danger">Borrar</a>
         </div>
     </div>
 
