--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -26,6 +26,8 @@ Vuelos
             <p class="card-text">Fecha de Ida: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Vuelta: {{i.date_return}}</p>
             <h3 class="card-title">Precio: {{i.price}}</h3>
+            <a href="#" class="btn btn-primary">Editar</a>
+            <a href="#" class="btn btn-danger">Borrar</a>
             </div>
         </div>
 
