--- a/pagina_viajes/template/hotel.html
+++ b/pagina_viajes/template/hotel.html
@@ -28,6 +28,8 @@ Hoteles
             <p class="card-text">Fecha de Entrada: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Salida: {{i.date_return}}</p>
             <h3 class="card-text">Precio: {{i.price}}</h3>
+            <a href="#" class="btn btn-primary">Editar</a>
+            <a href="/info/delete-hotel/{{ i.id }}/" class="btn btn-danger">Borrar</a>
         </div>
     </div>
 
