borrar paquetes y vuelos

--- a/pagina_viajes/template/paquete.html
+++ b/pagina_viajes/template/paquete.html
@@ -27,7 +27,7 @@ Paquetes
         <p class="card-text">{{paquete.description}}</p>
         <h3 class="card-title">Precio: {{paquete.price}}</h3>
         <a href="#" class="btn btn-primary">Editar</a>
-        <a href="#" class="btn btn-danger">Borrar</a>
+        <a href="/info/delete-paquete/{{ paquete.id }}/" class="btn btn-danger">Borrar</a>
         </div>
     </div>
 
