--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -27,7 +27,7 @@ Vuelos
             <p class="card-text">Fecha de Vuelta: {{i.date_return}}</p>
             <h3 class="card-title">Precio: {{i.price}}</h3>
             <a href="#" class="btn btn-primary">Editar</a>
-            <a href="#" class="btn btn-danger">Borrar</a>
+            <a href="/info/delete-vuelo/{{ i.id }}/" class="btn btn-danger">Borrar</a>
             </div>
         </div>
 
