--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -22,11 +22,12 @@ Vuelos
         <div class="card" style="width: 18rem;">
             <div class="card-body">
             <h2 class="card-title">{{i.name}}</h2>
-            <h3 class="card-subtitle mb-2 text-muted">{{i.location}}</h3>
+            <p class="card-text">Partida: {{i.departure}}</p>
+            <p class="card-text">Destino: {{i.destination}}</p>
             <p class="card-text">Fecha de Ida: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Vuelta: {{i.date_return}}</p>
             <h3 class="card-title">Precio: {{i.price}}</h3>
-            <a href="#" class="btn btn-primary">Editar</a>
+            <a href="/info/update-vuelo/{{ i.id }}/" class="btn btn-primary">Editar</a>
             <a href="/info/delete-vuelo/{{ i.id }}/" class="btn btn-danger">Borrar</a>
             </div>
         </div>
