--- a/pagina_viajes/template/base.html
+++ b/pagina_viajes/template/base.html
@@ -14,7 +14,7 @@
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/info/viajes-hotels/"> hoteles <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/info/viajes-hotels/"> Hoteles <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/info/viajes-paquetes/"> paquetes <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/info/viajes-paquetes/"> Paquetes <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/info/viajes-vuelos/"> vuelos <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/info/viajes-vuelos/"> Vuelos <span class="sr-only">(current)</span></a>
             </li>
             
             <li class="nav-item">
