login, register, log out agregados

--- a/pagina_viajes/template/base.html
+++ b/pagina_viajes/template/base.html
@@ -14,7 +14,7 @@
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Inicio</a>
+        <a class="navbar-brand" href="/"style="margin-right: 3rem">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,16 +28,24 @@
               <a class="nav-link" href="/info/viajes-paquetes/"> Paquetes <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/info/viajes-vuelos/"> Vuelos <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/info/viajes-vuelos/" style="margin-right: 27rem"> Vuelos <span class="sr-only">(current)</span></a>
             </li>
-            
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+            {% if request.user.is_authenticated %}
+            <li class="nav-item active">
+              <a class="nav-link" href="/accounts/logout/">Cierra Sesión</a>
             </li>
+            {% else %}
+            <li class="nav-item active">
+              <a class="nav-link" href="/accounts/login/">Inicia Sesión</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/accounts/register/">Regístrate</a>
+            </li>
+            {% endif %}
           </ul>
           <form class="form-inline my-2 my-lg-0" action="/info/search_products/" method="GET">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search"> 
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
           </form>
         </div>
       </nav>
