--- a/pagina_viajes/template/base.html
+++ b/pagina_viajes/template/base.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="/accounts/login/">Inicia Sesión</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/accounts/register/">Regístrate</a>
+              <a class="nav-link" href="/accounts/signup/">Regístrate</a>
             </li>
             {% endif %}
           </ul>
