boton de Crear agregado a hotel, vuelo y paquete+media: posibilidad de agregar imagenes

--- a/pagina_viajes/template/paquete.html
+++ b/pagina_viajes/template/paquete.html
@@ -32,6 +32,7 @@ Paquetes
     </div>
 
     {% endfor %}
+    <a href="/info/create-paquete/" class="btn btn-success">Crear</a>
 </body>
 </html>
 
