--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -33,6 +33,7 @@ Vuelos
         </div>
 
     {% endfor %}
+    <a href="/info/create-vuelo/" class="btn btn-success">Crear</a>
 </body>
 </html>
 
