--- a/pagina_viajes/template/index.html
+++ b/pagina_viajes/template/index.html
@@ -2,14 +2,14 @@
 
 {% block titulo %}
 
-Home
+Inicio
 
 {% endblock %}
 
 
 {% block contenidoquecambia %}
 
-<h1>Este es el index</h1>
+<h1>Encuentre su próximo viaje</h1>
 
 {% if message %}
 
