se agrega posibilidad de poner imagenes a vuelos, paquetes y hoteles

--- a/pagina_viajes/template/formulario_nuevovuelo.html
+++ b/pagina_viajes/template/formulario_nuevovuelo.html
@@ -9,7 +9,7 @@ Formulario para nuevos vuelos:
 
 {% block contenidoquecambia %}
 
-<form actions="" method="POST">
+<form actions="" method="POST" enctype="multipart/form-data">
 {% csrf_token %}
 
 <table>
