--- a/pagina_viajes/template/hotel.html
+++ b/pagina_viajes/template/hotel.html
@@ -22,6 +22,9 @@ Hoteles
     {% for i in hotels %}
 
     <div class="card" style="width: 18rem;">
+        {% if i.image %}
+        <image src="{{ i.image.url }}" class="card-img-top">
+        {% endif %}
         <div class="card-body">
             <h3 class="card-title">{{i.name}}</h3>
             <h4 class="card-text">{{i.location}}</h4>
