--- a/pagina_viajes/template/formulario_nuevopaquete.html
+++ b/pagina_viajes/template/formulario_nuevopaquete.html
@@ -9,7 +9,7 @@ Formulario para nuevos paquetes:
 
 {% block contenidoquecambia %}
 
-<form actions="" method="POST">
+<form actions="" method="POST" enctype="multipart/form-data">
 {% csrf_token %}
 
 <table>
