--- a/pagina_viajes/template/paquete.html
+++ b/pagina_viajes/template/paquete.html
@@ -21,6 +21,9 @@ Paquetes
     {% for paquete in paquetes %}
 
     <div class="card" style="width: 18rem;">
+        {% if paquete.image %}
+        <image src="{{ paquete.image.url }}" class="card-img-top">
+        {% endif %}
         <div class="card-body">
         <h2 class="card-title">{{paquete.name}}</h2>
         <h3 class="card-subtitle mb-2 text-muted">{{paquete.location}}</h3>
