restricciones agregadas para usuarios y permisos para superadmin + boton de seleccionar agregado

--- a/pagina_viajes/template/paquete.html
+++ b/pagina_viajes/template/paquete.html
@@ -29,13 +29,20 @@ Paquetes
         <h3 class="card-subtitle mb-2 text-muted">{{paquete.location}}</h3>
         <p class="card-text">{{paquete.description}}</p>
         <h3 class="card-title">Precio: {{paquete.price}}</h3>
-        <a href="/info/update-paquete/{{ paquete.id }}/" class="btn btn-primary">Editar</a>
+        {% if request.user.is_superuser %}
+        <a href="/info/update-paquete/{{ paquete.id }}/" class="btn btn-warning">Editar</a>
         <a href="/info/delete-paquete/{{ paquete.id }}/" class="btn btn-danger">Borrar</a>
+        {% endif %}
+        {% if request.user.is_authenticated %}
+        <a href="#" class="btn btn-primary">Seleccionar</a>
+        {% endif %}
         </div>
     </div>
 
     {% endfor %}
+    {% if request.user.is_superuser %}
     <a href="/info/create-paquete/" class="btn btn-success">Crear</a>
+    {% endif %}
 </body>
 </html>
 
