--- a/pagina_viajes/template/hotel.html
+++ b/pagina_viajes/template/hotel.html
@@ -21,7 +21,7 @@ Hoteles
 <body>
     {% for i in hotels %}
 
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 20rem;">
         {% if i.image %}
         <image src="{{ i.image.url }}" class="card-img-top">
         {% endif %}
@@ -31,13 +31,20 @@ Hoteles
             <p class="card-text">Fecha de Entrada: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Salida: {{i.date_return}}</p>
             <h3 class="card-text">Precio: {{i.price}}</h3>
-            <a href="/info/update-hotel/{{ i.id }}/" class="btn btn-primary">Editar</a>
+        {% if request.user.is_superuser %}
+            <a href="/info/update-hotel/{{ i.id }}/" class="btn btn-warning">Editar</a>
             <a href="/info/delete-hotel/{{ i.id }}/" class="btn btn-danger">Borrar</a>
+        {% endif %}
+        {% if request.user.is_authenticated %}
+            <a href="#" class="btn btn-primary">Seleccionar</a>
+        {% endif %}
         </div>
     </div>
 
     {% endfor %}
+    {% if request.user.is_superuser %}
     <a href="/info/create-hotel/" class="btn btn-success">Crear</a>
+    {% endif %}
 </body>
 </html>
 
