--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -30,13 +30,20 @@ Vuelos
             <p class="card-text">Fecha de Ida: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Vuelta: {{i.date_return}}</p>
             <h3 class="card-title">Precio: {{i.price}}</h3>
-            <a href="/info/update-vuelo/{{ i.id }}/" class="btn btn-primary">Editar</a>
+            {% if request.user.is_superuser %}
+            <a href="/info/update-vuelo/{{ i.id }}/" class="btn btn-warning">Editar</a>
             <a href="/info/delete-vuelo/{{ i.id }}/" class="btn btn-danger">Borrar</a>
+            {% endif %}
+            {% if request.user.is_authenticated %}
+            <a href="#" class="btn btn-primary">Seleccionar</a>
+            {% endif %}
             </div>
         </div>
 
     {% endfor %}
+    {% if request.user.is_superuser %}
     <a href="/info/create-vuelo/" class="btn btn-success">Crear</a>
+    {% endif %}
 </body>
 </html>
 
