not-found page agregado, opcion para ver perfil agregado y modificaciones al template de index

--- a/pagina_viajes/template/index.html
+++ b/pagina_viajes/template/index.html
@@ -9,7 +9,7 @@ Inicio
 
 {% block contenidoquecambia %}
 
-<h1>Encuentre su próximo viaje</h1>
+<h1><center>Encuentre su próximo viaje</center></h1>
 
 {% if message %}
 
@@ -17,4 +17,40 @@ Inicio
 
 {% endif %}
 
+<p>
+
+
+
+
+
+
+
+</p>
+
+<h3><center>Ofrecemos hoteles, vuelos y paquetes. Inicie sesión y puede reservar ya su próximo vuelo a los mejores precios.</center></h3>
+
+<p>
+
+
+
+
+
+
+
+</p>
+
+<center><image src="https://elplanetaurbano.com/wp-content/uploads/2021/01/billetes-avion-viajes-tarifas-comparacion-precios-ahorro-compra-vuelos-bbva-1024x683-1.jpg" width="500" height="400" /></center>
+
+<p>
+
+
+
+
+
+
+
+</p>
+<div style="text-align: center">
+<a href="#" class="btn btn-success">Ver más</a>
+</div>
 {% endblock %}
