--- a/pagina_viajes/template/hotel.html
+++ b/pagina_viajes/template/hotel.html
@@ -36,7 +36,7 @@ Hoteles
             <a href="/info/delete-hotel/{{ i.id }}/" class="btn btn-danger">Borrar</a>
         {% endif %}
         {% if request.user.is_authenticated %}
-            <a href="#" class="btn btn-primary">Seleccionar</a>
+            <a href="/not-found/" class="btn btn-primary">Seleccionar</a>
         {% endif %}
         </div>
     </div>
