--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -35,7 +35,7 @@ Vuelos
             <a href="/info/delete-vuelo/{{ i.id }}/" class="btn btn-danger">Borrar</a>
             {% endif %}
             {% if request.user.is_authenticated %}
-            <a href="#" class="btn btn-primary">Seleccionar</a>
+            <a href="/not-found/" class="btn btn-primary">Seleccionar</a>
             {% endif %}
             </div>
         </div>
