about agregado con boton

--- a/pagina_viajes/template/index.html
+++ b/pagina_viajes/template/index.html
@@ -51,6 +51,6 @@ Inicio
 
 </p>
 <div style="text-align: center">
-<a href="#" class="btn btn-success">Ver más</a>
+<a href="/about/" class="btn btn-success">Más sobre esta página</a>
 </div>
 {% endblock %}
