modificaciones al about

--- a/pagina_viajes/template/about.html
+++ b/pagina_viajes/template/about.html
@@ -12,9 +12,10 @@ Sobre Nosotros
 <h1><center>¡Hola!&#128075;</center></h1>
 
 <h3>Somos Celeste y Marco de la comisión 31090 de Coderhouse. Es nuestra primera experiencia en el mundo de la programación y nos alegra haber llegado hasta esta instancia. </h3>
-<h3>Juntos decidimos crear una página de viajes, diseñada con Python y HTML, que ofrece diferentes opciones de paquetes, vuelos y hoteles✈️</h3>
+<h3>Decidimos crear una página de viajes, diseñada con Python y HTML, que ofrece diferentes opciones de paquetes, vuelos y hoteles✈️</h3>
 </h3>
-<h3>Para visualizar las opciones disponibles de estas misma, puede hacerlo ingresando en los links de arriba, dependiendo lo que busca. </h3>
+<h3>Celeste creó la tres clases con sus respectivos formularios para crear, editar y eliminar. Trabajó sobre el README, about, index, media, el app de accounts, los profiles, el login, logout y registro, botones y permisos.</h3>
+<h3>Para visualizar las opciones disponibles en esta página, puede hacerlo haciendo click en las opcions que se les presenta arriba, dependiendo lo que busca. </h3>
 <h3>Regístrese y/o incie sesión para poder seleccionar lo que le interese. </h3>
 <h3>Bon Voyage!</h3>
 {% endblock %}
