agregar imagen a search + sacar boton de profile

--- a/pagina_viajes/template/base.html
+++ b/pagina_viajes/template/base.html
@@ -32,10 +32,7 @@
             </li>
             {% if request.user.is_authenticated %}
             <li class="nav-item active">
-              <a class="nav-link" href="/accounts/logout/">Cierra Sesión</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/accounts/profile/">Perfil</a>
+              <a class="nav-link" href="/accounts/logout/">Cerrar Sesión</a>
             </li>
             {% else %}
             <li class="nav-item active">
