--- a/pagina_viajes/template/vuelo.html
+++ b/pagina_viajes/template/vuelo.html
@@ -29,7 +29,7 @@ Vuelos
             <p class="card-text">Destino: {{i.destination}}</p>
             <p class="card-text">Fecha de Ida: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Vuelta: {{i.date_return}}</p>
-            <h3 class="card-title">Precio: {{i.price}}</h3>
+            <h3 class="card-title">Precio: ${{i.price}}</h3>
             {% if request.user.is_superuser %}
             <a href="/info/update-vuelo/{{ i.id }}/" class="btn btn-warning">Editar</a>
             <a href="/info/delete-vuelo/{{ i.id }}/" class="btn btn-danger">Borrar</a>
