--- a/pagina_viajes/template/accounts/editprofile.html
+++ b/pagina_viajes/template/accounts/editprofile.html
@@ -1,7 +1,7 @@
 {%  extends "template/base.html" %}
 
 {% block titulo %}
-Editar Perfil
+Registrar
 {% endblock %}
 
 {% block contenidoquecambia %}
