Modificar botones search_products

--- a/pagina_viajes/template/search_products.html
+++ b/pagina_viajes/template/search_products.html
@@ -18,8 +18,13 @@ search
             <p class="card-text">Fecha de Entrada: {{i.date_departue}}</p>
             <p class="card-text">Fecha de Salida: {{i.date_return}}</p>
             <h3 class="card-text">Precio: ${{i.price}}</h3>
-            <a href="/info/update-hotel/{{ i.id }}/" class="btn btn-primary">Editar</a>
+            {% if request.user.is_superuser %}
+            <a href="/info/update-hotel/{{ i.id }}/" class="btn btn-warning">Editar</a>
             <a href="/info/delete-hotel/{{ i.id }}/" class="btn btn-danger">Borrar</a>
+            {% endif %}
+            {% if request.user.is_authenticated %}
+            <a href="/not-found/" class="btn btn-primary">Seleccionar</a>
+            {% endif %}
         </div>
     </div>
 
