agrego el boton para ingresar a perfil, pagina de perfil y su edit

--- a/pagina_viajes/template/base.html
+++ b/pagina_viajes/template/base.html
@@ -34,6 +34,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="/accounts/logout/">Cerrar Sesión</a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/accounts/profile/">Perfil</a>
+            </li>
             {% else %}
             <li class="nav-item active">
               <a class="nav-link" href="/accounts/login/">Inicia Sesión</a>
