--- a/pagina_viajes/template/accounts/editprofile.html
+++ b/pagina_viajes/template/accounts/editprofile.html
@@ -1,22 +1,110 @@
 {%  extends "template/base.html" %}
 
 {% block titulo %}
-Registrar
+Editar perfil
 {% endblock %}
 
 {% block contenidoquecambia %}
 
 <form action="" method="POST">
-{% csrf_token %}
-    
-    <table>
-    
-    {{UserEditForm.as_table}}
-    
-    </table>
-    
-    <p><input type="submit" value="Enviar"></p>
-    
-</form>
+    {% csrf_token %}
 
+<section style="background-color: #eee">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card mb-4">
+                    <div class="card-body text-center">
+                        <img
+                            src="{{ user.image }}"
+                            alt="avatar"
+                            class="rounded-circle img-fluid"
+                            style="width: 150px"
+                        />
+                        <h5 class="my-3">{{ user.username }}</h5>
+                        <p class="text-muted mb-4">{{ user.location }}</p>
+                    </div>
+                </div>
+            </div>
+                <div class="col-lg-8">
+                    <form method="POST">
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <p class="mb-0">Nombre</p>
+                                    </div>
+                                    <div class="col-sm-9">
+
+                                        <input type="text" name="username" class="form-control" value="{{ user.username }}" required >
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <p class="mb-0">Descripción</p>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <input type="text" name="description" class="form-control" value="{{ user.description }}" required >
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <p class="mb-0">Página web</p>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <input type="text" name="webpage" class="form-control" value="{{ user.webpage }}" required >
+
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <p class="mb-0">Contraseña</p>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <input type="text" name="password1" class="form-control" value="{{ user.password1 }}" required >
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <p class="mb-0">Repita la contraseña</p>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <input type="text" name="password2" class="form-control" value="{{ user.password2 }}" required >
+
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <p class="mb-0">Email</p>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        <p class="text-muted mb-0">
+                                            <p>No puede modificar su dirección de mail</p>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex justify-content-around mb-2">
+                            <a href="/accounts/profile">
+                                <button
+                                    type="button"
+                                    class="btn btn-outline-primary ms-1"
+                                >
+                                    Cancelar
+                                </button>
+                            </a>
+                            <input type="submit" class="btn btn-success" value="Guardar cambios">
+                        </div>
+                    </form>
+                </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
